--- a/css/bootstrap-reset.css
+++ b/css/bootstrap-reset.css
@@ -171,14 +171,14 @@ ul {
 }
 
 .btn-success {
-    background-color: #43a047;
-    border-color: #43a047;
+    background-color: #1B7E5A;
+    border-color: #1B7E5A;
     color: #FFFFFF;
 }
 
 .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open .dropdown-toggle.btn-success {
-    background-color: #4caf50;
-    border-color: #4caf50;
+    background-color: #26B37E;
+    border-color: #26B37E;
     color: #FFFFFF;
 }
 
